Fix: Banner button text wrapping

--- a/public/bet/home.css
+++ b/public/bet/home.css
@@ -23,6 +23,9 @@
     font-size: 3rem;
     width: 120%;
 }
+.banner-btn{
+    text-wrap: nowrap;
+}
 .banner-7::after {
     /* max-height: 90vh!important; */
     position: absolute;
